Adding execute file to invoke the processing commands

--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "mailparser": "^0.5.3",
     "node-mbox": "^0.2.1",
     "papaparse": "latest",
-    "yargs": "^3.30.0"
+    "yargs": "^3.30.0",
+    "nodemailer": "latest"
   }
 }
