--- a/provider_reports/requirements.txt
+++ b/provider_reports/requirements.txt
@@ -1,6 +1,6 @@
 retrying~=1.3.4
 selenium~=4.9.1
 pandas~=2.0.1
-pdfkit~=1.0.0
 chromedriver_autoinstaller==0.4.0
 beautifulsoup4==4.12.2
+openpyxl==3.1.2
